--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
 
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>    
     <!-- 添加 favicon icon -->
-
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_409739_jutxaux7f7ds4i.css">
     <link rel="stylesheet" href="static/css/reset.css">
+    <link rel="stylesheet" href="static/css/flex.css">
     <script src="static/js/fiexible.js"></script>
     <title>my-daily</title>
   </head>
